# arduino-automation

./: .gitignore  Cargo.toml
src/: consts.rs  daemon.rs  lib.rs  main.rs
src/device/: Device.rs  googledevice.rs  mod.rs
src/models/: attributes.rs  device.rs  device_type.rs  hardware_type.rs  mod.rs  sqlsprinkler.rs  tests.rs  traits.rs  tv.rs
src/tests/: tests.rs
tests/: tests.rs
