[package]
name = "arduino-automation"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0.2", features = ["full"] }
warp = "0.3"
parking_lot = "0.10.0"
uuid = "0.8"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
isahc = "1.4.0"
regex = "1"
futures = "*"
wake-on-lan = "0.2.0"
firebase = { path = "../rust-firebase" }
env_logger = "0.9.0"